feat: separate dev/prod Dockerfile

--- a/SER_model/Dockerfile.prod
+++ b/SER_model/Dockerfile.prod
@@ -1,3 +1,8 @@
+# 1. 도커 이미지 빌드
+# docker build -f Dockerfile.prod -t actemo:prod .
+# 2. 도커 컨테이너 실행
+# docker run -it --rm --name actemo-prod actemo:prod
+
 # Specifies base image and tag
 FROM pytorch/pytorch:latest
 WORKDIR /root
@@ -9,9 +14,8 @@ RUN pip install numpy pandas librosa tqdm torchaudio
 # RUN curl https://example-url/path-to-data/data-filename --output /root/data-filename
 
 # Copies the trainer code to the docker image.
-# 진짜 배포할때는 이 부분 주석 해제하고 볼륨 끄기
-# COPY . /root/codes
+COPY . /root/code
 
 # Sets up the entry point to invoke the trainer.
 WORKDIR /root/code
-# ENTRYPOINT ["python", "train.py"]
+ENTRYPOINT ["python", "test.py"]
