--- a/SER_model/cloudbuild.yaml
+++ b/SER_model/cloudbuild.yaml
@@ -31,8 +31,8 @@ steps:
     entrypoint: gcloud
     args: ["run", "deploy", "${_SERVICE_NAME}", "--image", "gcr.io/$PROJECT_ID/${_SERVICE_NAME}:$COMMIT_SHA", "--port", "8080", "--region", "${_REGION}"]
 
-images:
-  - 'gcr.io/$PROJECT_ID/${_SERVICE_NAME}:$COMMIT_SHA'
+# images:
+#   - 'gcr.io/$PROJECT_ID/${_SERVICE_NAME}:$COMMIT_SHA'
 
 options:
   logging: CLOUD_LOGGING_ONLY 
