--- a/SER_model/cloudbuild.yaml
+++ b/SER_model/cloudbuild.yaml
@@ -19,6 +19,8 @@ steps:
       - --cache=true
       - --cache-ttl=168h
       - --dockerfile=./SER_model/Dockerfile.prod
+      - --compressed-caching=false
+      - --cache-copy-layers=true
 
 ### 2. Push 
   # - id: "push image"
