--- a/SER_model/Dockerfile.dev
+++ b/SER_model/Dockerfile.dev
@@ -14,7 +14,7 @@ RUN sudo apt-get install -y ffmpeg
 
 # Installs additional packages
 COPY requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip install --progress-bar=on -r requirements.txt
 
 # Sets up the entry point to invoke the trainer.
 WORKDIR /root/code
