--- a/SER_model/cloudbuild.yaml
+++ b/SER_model/cloudbuild.yaml
@@ -14,7 +14,12 @@ steps:
 ### 1. Build the Docker image
   - id: "build image"
     name: "gcr.io/cloud-builders/docker"
-    args: ["build", "-t", "gcr.io/$PROJECT_ID/${_SERVICE_NAME}:$COMMIT_SHA", "-f", "SER_model/Dockerfile.prod", "."]
+    args: [
+      "build", 
+      "-t", "gcr.io/$PROJECT_ID/${_SERVICE_NAME}:$COMMIT_SHA", 
+      "-f", "SER_model/Dockerfile.prod", 
+      "--cache-from", "gcr.io/$PROJECT_ID/${_SERVICE_NAME}:latest", "."
+      ]
 
 ### 2. Push 
   - id: "push image"
