--- a/SER_model/cloudbuild.yaml
+++ b/SER_model/cloudbuild.yaml
@@ -6,20 +6,20 @@ substitutions:
 
 steps:  
 ### 0. Pull the latest image
-  - id: "pull latest image"
-    name: "gcr.io/cloud-builders/docker"
-    entrypoint: "bash"
-    args: ["-c", "docker pull gcr.io/$PROJECT_ID/${_SERVICE_NAME}:latest || exit 0"]
+  # - id: "pull latest image"
+  #   name: "gcr.io/cloud-builders/docker"
+  #   entrypoint: "bash"
+  #   args: ["-c", "docker pull gcr.io/$PROJECT_ID/${_SERVICE_NAME}:latest || exit 0"]
 
 ### 1. Build the Docker image
   - id: "build image"
     name: "gcr.io/cloud-builders/docker"
     args: [
       "build", 
+      "--cache-from", "gcr.io/$PROJECT_ID/${_SERVICE_NAME}:latest",
       "-t", "gcr.io/$PROJECT_ID/${_SERVICE_NAME}:$COMMIT_SHA", 
       "-f", "SER_model/Dockerfile.prod", 
-      "--cache-from", "gcr.io/$PROJECT_ID/${_SERVICE_NAME}:latest", 
-      "--pull=false", "."
+      "."
       ]
 
 ### 2. Push 
