--- a/SER_model/Dockerfile.prod
+++ b/SER_model/Dockerfile.prod
@@ -4,23 +4,28 @@
 # docker run -it --rm --name actemo-prod actemo:prod
 
 # Specifies base image and tag
-FROM python:3.8-slim-buster
+FROM python:3.8-slim-buster as builder
 WORKDIR /root
 
-# Update the package lists and install sudo
-RUN apt-get update && apt-get install -y sudo
-# Install ffmpeg
-RUN sudo apt-get install -y ffmpeg
-
-# Installs additional packages
+# Install python packages
 COPY requirements.txt .
-RUN pip install --progress-bar=on -r requirements.txt
+RUN pip install --user --progress-bar=on --no-cache-dir -r requirements.txt 
 
-# Copies the trainer code to the docker image.
-COPY SER_model/ /root/code
-
-# Sets up the entry point to invoke the trainer.
+# Start a new build stage
+FROM python:3.8-slim-buster as runner
 WORKDIR /root/code
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends ffmpeg && \
+    rm -rf /var/lib/apt/lists/*
+
+# Copies the python packages from the builder stage
+COPY --from=builder /root/.local /root/.local
+# Copy the source code
+COPY SER_model/ .
+# Set the environment variable
+ENV PATH=/root/.local/bin:$PATH
+
 # run following command
 # uvicorn app:app --host 0.0.0.0 --port 8000
 EXPOSE 8080
