--- a/SER_model/Dockerfile.prod
+++ b/SER_model/Dockerfile.prod
@@ -9,7 +9,8 @@ WORKDIR /root
 
 # Install python packages
 COPY requirements.txt .
-RUN pip install --user --progress-bar=on --no-cache-dir -r requirements.txt 
+RUN pip install --user --progress-bar=on --no-cache-dir -r requirements.txt && \
+    pip install --user --no-cache-dir torch torchaudio --index-url https://download.pytorch.org/whl/cpu
 
 # Start a new build stage
 FROM python:3.8-slim-buster as runner
