--- a/SER_model/Dockerfile.prod
+++ b/SER_model/Dockerfile.prod
@@ -9,8 +9,8 @@ WORKDIR /root
 
 # Install python packages
 COPY requirements.txt .
-RUN pip install --progress-bar=on --no-cache-dir -r requirements.txt && \
-    pip install --no-cache-dir torch torchaudio --index-url https://download.pytorch.org/whl/cpu
+RUN pip install --progress-bar=on -r requirements.txt && \
+    pip install torch torchaudio --index-url https://download.pytorch.org/whl/cpu
 
 # Start a new build stage
 FROM python:3.8-slim-buster as runner
